--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <h1 class="name" title="Gabriele Vierti">Gabriele Vierti</h1>
 
           <p class="title">Software Developer</p>
+          
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -122,30 +123,18 @@
           </li>
 
         </ul>
-        <!--
+        
         <div class="separator"></div>
 
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://github.com/theboredprog" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
-
-        </ul>-->
+        </ul>
 
       </div>
 
@@ -201,14 +190,10 @@
 
         <section class="about-text">
           <p>
-            I'm a Software Developer based in Italy, working mostly with languages like C, C++ and sometimes python, mostly
-            interested in game development.
-            I enjoy turning complex problems into simple, efficent and intuitive solutions.
+            I'm a Software Developer based in Italy, specialized in C, C++ and python, mostly
+            interested in game development and graphics programming.
           </p>
 
-          <p>
-            My job is to find the best way to write algorithms that accomplish what you need with minimal performance.
-            </p>
         </section>
 
 
@@ -233,7 +218,7 @@
                 <h4 class="h4 service-item-title">Game Development</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality game design made at a professional level.
+                  The most modern and high-quality game development made at a professional level.
                 </p>
               </div>
 
@@ -249,7 +234,7 @@
                 <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  High-quality development of sites at a professional level.
                 </p>
               </div>
 
